# fusion_transport_surrogates

./: README.md  pyproject.toml
fusion_transport_surrogates/: networks.py  networks_test.py  qlknn_model.py  qlknn_model_test.py  qlknn_model_test_utils.py  ukaea_tglfnn.py  utils.py
fusion_transport_surrogates/models/: qlknn_7_11.qlknn  qlknn_7_11_test.py  qlknn_7_11_test_data.npz
